<resources>
    <string name="app_name">UniLife</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Email...</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Login</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description ...</string>
    <string name="new_post_btn_hint">Post Blog</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_ac_text">Account</string>
    <string name="action_categories_btn">Categories</string>
    <string name="action_edit_btn">Edit Profile</string>
    <string name="action_settings">Settings</string>
    <string name="opened">open</string>
    <string name="closed">close</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="feedbackandsupport">Feedback And Support</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="about_unilife">About Unilife</string>
    <string name="log_out">Log Out</string>
    <string name="Save">save</string>
    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="second_hand_stuffs">Second Hand Stuffs</string>
    <string name="searching_home_mate">Searching Home Mate</string>
    <string name="searching_restaurants">Searching Restaurants</string>
</resources>