<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHesapAyarlari"
        android:title="@string/account_settings">
        <menu>
            <item
                android:id ="@+id/navProfiliniDuzenle"
                android:checkable = "true"
                android:icon = "@mipmap/user_profile_icon"
                android:title = "@string/edit_profile" />

            <item
                android:id ="@+id/navSifreDegistir"
                android:checkable = "true"
                android:icon = "@mipmap/user_password"
                android:title = "@string/change_password" />
        </menu>
    </item>

    <item
        android:id="@+id/navGeriBildirim"
        android:title="@string/feedbackandsupport">
        <menu>
            <item
                android:id ="@+id/navPuanVer"
                android:checkable ="true"
                android:title ="@string/rate_us" />

            <item
                android:id ="@+id/navPaylas"
                android:checkable ="true"
                android:title ="@string/share" />

        </menu>
    </item>

    <item
        android:id="@+id/navHakkimizda"
        android:title="@string/about_us">
        <menu>
            <item
                android:id="@+id/navUniLifeHk"
                android:checkable ="true"
                android:title ="@string/about_unilife" />

            <item
                android:id ="@+id/navExit"
                android:checkable ="true"
                android:title ="@string/log_out" />
        </menu>
    </item>
</menu>