<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.falbookv4.helloteam.falbook.activities.ProfilActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/setup_image"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_placeholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/setup_name"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/likeBtnGray"
            android:drawableLeft="@mipmap/user_profile_icon"
            android:drawablePadding="15dp"
            android:drawableStart="@mipmap/user_profile_icon"
            android:ems="8"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setup_image" />

        <EditText
            android:id="@+id/setup_bio"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/likeBtnGray"
            android:drawableLeft="@mipmap/user_bio"
            android:drawablePadding="15dp"
            android:drawableStart="@mipmap/user_bio"
            android:hint="@string/bio"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            android:textCursorDrawable="@null"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setup_name" />

        <Button
            android:id="@+id/setup_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setup_bio" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>